# BeFoR64

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.bsd-3.md  README.md  cloneghpages.sh  deploydoc.sh  fobos  fpm.toml  get_automatic_changelog.sh  index.html  makedoc.sh  params.json  search.html
doc/: ChangeLog-BeFoR64.md  README-BeFoR64.md  main_page.md
interface/: b64_decode.html  b64_decode_up.html  b64_encode.html  b64_encode_up.html  bcton.html  bit_size.html  bstr.html  byte_size.html  cton.html  digit.html  pack_data.html  str.html  strz.html
lists/: files.html  modules.html  procedures.html  programs.html
module/: befor64.html  befor64_pack_data_m.html  ir_precision.html  lib_base64.html  lib_pack_data.html
proc/: autotest.html  b64_decode_i1.html  b64_decode_i1_a.html  b64_decode_i2.html  b64_decode_i2_a.html  b64_decode_i4.html  b64_decode_i4_a.html  b64_decode_i8.html  b64_decode_i8_a.html  b64_decode_r16.html  b64_decode_r16_a.html  b64_decode_r4.html  b64_decode_r4_a.html  b64_decode_r8.html  b64_decode_r8_a.html  b64_decode_string.html  b64_decode_string_a.html  (+114 more)
src/tests/: CMakeLists.txt  befor64_test.f90
src/tests/befor64/: befor64-doctest-10.result  befor64-doctest-11.result  befor64-doctest-12.result  befor64-doctest-14.result  befor64-doctest-15.result  befor64-doctest-16.result  befor64-doctest-17.result  befor64-doctest-18.result  befor64-doctest-19.result  befor64-doctest-20.result  befor64-doctest-21.result  befor64-doctest-6.result  befor64-doctest-7.result  befor64-doctest-8.result  befor64-doctest-9.result
(+302 files in other folders)
